@@ -6,6 +6,7 @@ import org.spongepowered.asm.mixin.injection.InjectionPoint;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Files;
@@ -43,16 +44,17 @@ public class SkyHanniMixinPlugin implements IMixinConfigPlugin {
         String string = classUrl.toString();
         if (classUrl.getProtocol().equals("jar")) {
             try {
-                return new URL(string.substring(4, string.lastIndexOf('!')));
-            } catch (MalformedURLException e) {
+                return new URI(string.substring(4, string.lastIndexOf('!'))).toURL();
+            } catch (URISyntaxException | MalformedURLException e) {
                 throw new RuntimeException(e);
             }
         }
         if (string.endsWith(".class")) {
             try {
-                return new URL(string.replace("\\", "/")
-                    .replace(getClass().getCanonicalName().replace(".", "/") + ".class", ""));
-            } catch (MalformedURLException e) {
+                return new URI(string.replace("\\", "/")
+                    .replace(getClass().getCanonicalName().replace(".", "/") + ".class", ""))
+                    .toURL();
+            } catch (URISyntaxException | MalformedURLException e) {
                 throw new RuntimeException(e);
             }
         }
